# AI-native_sales-dashboard

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_mcp.py
backend/app/: graph_pic.py  main.py
backend/app/adapters/: mcp_sales_client.py
backend/app/adapters/inbound/api/: chat_routes.py  dashboard_routes.py  dependencies.py
backend/app/adapters/outbound/agent/: agent_prompt_builder.py  agent_result_utils.py  google_adk_agent_adapter.py
backend/app/adapters/outbound/agent/sales_agent/: agent.py  prompts.py  tool_context.py  tool_types.py  tools.py
backend/app/adapters/outbound/mcp/: mcp_client.py  supplier_analytics_mcp_adapter.py
backend/app/adapters/outbound/session/: in_memory_chat_session_store.py
backend/app/api/: agent.py  dashboard.py  health.py  tenancy.py
backend/app/application/ports/: agent_port.py  chat_session_store_port.py  supplier_analytics_port.py
backend/app/application/services/: chat_service.py  dashboard_service.py
backend/app/auth/: demo_user_context.py
backend/app/core/: config.py
backend/app/dependencies/: current_user.py
backend/app/domain/: agent_runtime_context.py  analytics.py  chat.py  chat_session.py  dashboard.py  tool_result.py  user_context.py
backend/app/ports/: __init__.py  sales_analytics.py
backend/app/schemas/: agent.py  auth.py  dashboard.py
backend/app/services/: __init__.py  agent_service.py  dashboard_service.py
backend/app/tenancy/: context.py  demo_users.py
data/demo/csv/: orders.csv  products.csv  stores.csv  suppliers.csv
data/demo/excel/: monthly_supplier_sales.xlsx  product_master.xlsx  store_master.xlsx  supplier_master.xlsx
data/legacy_exports/: legacy_supplier_reports.xlsx  product_master_export.xlsx  raw_retail_sales_export.xlsx  store_geography_export.xlsx  supplier_master_export.xlsx
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: agent.ts  chat.ts  client.ts  dashboard.ts
frontend/src/components/chat/: ChatArtifactRenderer.tsx  ChatMessage.tsx  ChatPanel.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/i18n/: LanguageContext.tsx  ThemeContext.tsx  translations.ts
frontend/src/types/: agent.ts  chat.ts  dashboard.ts
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/app/: server.py
mcp_server/app/db/: connection.py  schema.sql
mcp_server/app/repositories/: sales_repository.py  supplier_analytics_repository.py
mcp_server/app/schemas/: common.py  sales.py
mcp_server/app/tools/: __init__.py  sales_tools.py  supplier_analytics_tools.py
mcp_server/scripts/: apply_schema.py  generate_demo_data.py  generate_mock_excel.py  import_demo_data.py  import_legacy_excel.py
(+13 files in other folders)
