[project]
name = "backend"
version = "0.1.0"
description = "Supplier BI backend — hexagonal architecture, MCP-powered analytics"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.28.1",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
