[project]
name = "mcp-server"
version = "0.1.0"
description = "Supplier BI MCP server — exposes sales analytics via the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.23.0",
    "mcp[cli]>=1.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
